# Q4-learning

./: README.md
hello world fastapi/: main.py  requirements.txt
pydantic fastapi/: main.py  pyproject.toml  requirements.txt
